--- a/app/home.css
+++ b/app/home.css
@@ -2,14 +2,14 @@
   position: relative;
   background-image: repeating-linear-gradient(
     to right,
-    #63DFFA,
-    #6C47FF,
-    #63DFFA
+    #987cff,
+    #657cff,
+    #63a2fa
   );
   z-index: 1;
   background-position-x: 0%;
   background-size: 200%;
-  animation: gradimate 3s linear infinite;
+  animation: gradimate 5s infinite linear;
   background-clip: text;
 }
 
