Update home.css and page.tsx

--- a/app/home.css
+++ b/app/home.css
@@ -2,9 +2,9 @@
   position: relative;
   background-image: repeating-linear-gradient(
     to right,
-    #987cff,
-    #657cff,
-    #63a2fa
+    #63DFFA,
+    #6C47FF,
+    #63DFFA
   );
   z-index: 1;
   background-position-x: 0%;
